--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,10 @@
 
 
 /* ==========================================================================
-   Author's custom styles
+   George's custom styles 
    ========================================================================== */
+
+
 
 .jumbotron {
   box-sizing: border-box;
@@ -36,6 +38,7 @@
 
 .img-wrong {
   margin-top: 40px;
+
 }
 
 .first-answer {
@@ -50,7 +53,95 @@
   margin-top: 40px;
 }
 
-body {
-  background-color: #DD0506;
+
+
+/* begin CSS live backgrounds here */
+
+
+
+
+@keyframes panning {
+  0% {
+    background-position: 0% 0%;
+  }
+  25% {
+    background-position: 100% 100%;
+  }
+   50% {
+    background-position: 100% 0%;
+  }
+  75% {
+    background-position: 0 100%;
+  }
+  200% {
+    background-position: 0 0;
+  }
+}
+
+.test {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  background: black url(http://unsplash.it/1900/1900/?random&blur);
+  background-size: 200%;
+  animation: panning 50s infinite linear;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.3);
+  z-index: 10;
+}
+
+.text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 20;
+  height: 60px;
+  width: 290px;
+  margin: auto;
+  font-family: Roboto;
+  font-size: 34px;
   color: white;
+  font-weight: 100;
+  text-align: center;
+  padding: 10px 40px;
+  border: 3px solid #ccc;
+  border-radius: 2px;
+  -webkit-font-smoothing: antialiased;
+}
+
+
+
+
+html, body {
+  height: 100%;
+}
+
+
+
+/* added CSS 3D text shadow here */
+
+
+
+h1 {
+  text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
 }
